# SQUIRM

./: .gitignore  CMakeLists.txt  COMPILING.md  README.md  a.th
.cache/clangd/index/: _base.h.51A09900EDC4F30F.idx  literals.h.6CC13F2BD0F7FB3E.idx  main.cpp.B8C724B3E3B9CE02.idx  (+3 more)
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: That  Wyrm  build-mingw.sh  build.bat  build.sh  clear.sh  debug.sh  memtest.sh  script.that  script.wyrm  test  test.sh
scripts/.that/: CMakeCache.txt  CMakeLists.txt  Makefile  build  cmake_install.cmake  script.cpp  test.cpp
scripts/Wyrm/: Wyrm
src/: wyrm.h
src/amph/: CMakeLists.txt  _base.h  main.cpp  main.h
src/api/: termcolor.hpp  that.h  wyrm.h  wyrmir.h  wyrmlib.h
src/base/: CMakeLists.txt  _base.h  literals.cpp  literals.h  main.cpp  main.h  operations.cpp  operations.h  types.cpp  types.h
src/compiler/: assembler.cpp  assembler.h
src/drac/: CMakeLists.txt  _base.h  main.h
src/kernel/: kernel.cpp
src/test/: CMakeLists.txt  main.cpp
src/test-lib/: CMakeLists.txt  _base.h  main.cpp
src/that/: CMakeLists.txt  that.h
src/that/vm/: data.h  (+3 more)
src/vm/: data.cpp  machine.cpp
src/wyrm/: CMakeLists.txt  _base.h  main.cpp  version.cpp
src/wyrm/builder/: builder.cpp  reinterpreter.cpp
src/wyrm/compiler/: airthmetic.cpp  assembler.cpp  assembler.h  lexer.cpp  lexer.h  nodes.cpp  nodes.h  parser.cpp  parser.h  serializer.cpp  serializer.h
src/wyrm/dlfcn-win32/: dlfcn.c  dlfcn.h
src/wyrm/flags/: flags.cpp  flags.h
src/wyrm/headers/: termcolor.hpp
src/wyrm/kernel/: kernel.cpp  kernel.h  library.cpp  library.h  shell.h
src/wyrm/libraries/: library.cpp  library.h
src/wyrm/vm/: data.cpp  data.h  internal.cpp  internal.h  machine.cpp  machine.h
temp/: airthmetic.h  assembler.h  serializer.cpp  shell.cpp  termcolor.hpp
temp/builder/: builder.cpp  builder.h  reinterpreter.h
temp/vm/: data.h  machine.cpp
tests/: maketest.sh
(+18 files in other folders)
